Fixed map showing through the rows of modites Fixed the the stuttered showing of the time / date over and over as you scroll Fixed map overflow issue on desktop Fixed Modite detail view lacking overflow-y Fixed intermittent incorrect map markers showing up

--- a/src/components/DetailsView/styles.module.css
+++ b/src/components/DetailsView/styles.module.css
@@ -6,7 +6,7 @@
   left: 12px;
   right: 12px;
   border-radius: 20px 20px 0 0;
-  transform: translateY(calc(100% + 90px));
+  transform: translateY(calc(100% + 40vh));
   transition: transform 250ms;
   overflow: visible;
   text-align: center;
@@ -40,16 +40,15 @@
   transition-delay: 400ms;
 }
 
-.isModite {
-  padding: 124px 20px 20px 20px;
-}
-
 .isProject {
   padding: 50px 0 0 0;
 }
 
 .moditeDetails {
   opacity: 0;
+  overflow-y: auto;
+  height: 100%;
+  padding: 124px 20px 20px 20px;
 }
 
 .moditeDetailsShown {
