--- a/src/components/ModiteList/styles.module.css
+++ b/src/components/ModiteList/styles.module.css
@@ -61,6 +61,9 @@
 .searchbarWrapCollapsed {
   transform: translateY(0px);
 }
+.searchbarWrapCollapsed .searchbarSpacer {
+  width: 40px;
+}
 .searchbarWrapHidden {
   transform: translateY(-200%);
 }
@@ -82,6 +85,7 @@
 
 .moditeListWrap {
   flex: 1;
+  z-index: -1;
 }
 
 .moditeListSpacer {
@@ -123,11 +127,7 @@
 }
 .searchbarSpacer {
   width: 0;
-  transition: width 0ms;
-  transition-delay: 50ms;
-}
-.searchbarSpacerCollapsed {
-  width: 40px;
+  transition: width 150ms;
 }
 
 .globeTitle {
