--- a/src/components/ModiteListItem/styles.module.css
+++ b/src/components/ModiteListItem/styles.module.css
@@ -14,7 +14,7 @@
 .itemInnerCt {
   margin: 0 12px;
   background-color: white;
-  box-shadow: 0px 14px 24px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 14px 24px 0px rgba(0, 0, 0, 0.25), 0px 33px 24px 0px rgba(255, 255, 255, 1);
   height: 52px;
   border-radius: 10px;
   display: flex;
